# wishlist

./: .env.example  .gitignore  Makefile  pyproject.toml
alembic/: env.py
backend/cfg/: settings.py
backend/database/models/: models.py
backend/docker/: Dockerfile  docker-compose.yml
