[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = []
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
yarl = "^1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
